  * EnforceConfigLogBuildRequirements now can take exceptions, which
    can be specified either as a filename (such as /usr/bin/bison or
    %(bindir)s/bison) or as a required trove (such as bison:runtime).
  * The trove.Trove initializer no longer allows for a trove to be created
    with a name that has more than one ":" character in it.

Changes in 0.62.9:
  * EnforceConfigLogBuildRequirements policy added.  It looks through
    all config.log files anywhere under the build directory for programs
    that configure has found, and ensures that the transitive closure
    of the build requirements contains each file listed.  (That is, if
    the file /usr/bin/perl has been found, and intltool:runtime is in
    the buildRequires list, and intltool:runtime requires perl, then the
    requirement is satisfied.)  This policy currently produces some false
    positives; the "greylist" that tries to remove false positives needs
    to be expanded.
  * The repository server now uses a repository instance specific key
    cache.  This fixes KeyNotFound errors seen when running multiple
    repositories on one server.

Changes in 0.62.8:
  * The bug, introduced in 0.62.7, that caused Conary to stop short of
    recursing to the innermost troves when handling erasures has been fixed.
  * EnforceSonameBuildRequirements enhanced to use the system database to
    find the right missing build requirements.
  * Make users and groups in a repository such that they may not differ only
    in case, i.e. if user foo exists, user Foo cannot be created.
  * files in /usr/%(lib)s/python/.* are no longer automatically given an 
    architecture flavor - if there are architecture-specific files in those 
    dirs, they should result in an arch-specific flavor through normal
    means.
  * By default, no OpenPGP signatures will be added to troves when
    doing commits unless a fingerprint is explicitly set in conaryrc.